# pymspack

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  ext.pxd  ext.pyx  pymspack.c  pymspack.pxd  pymspack.pyx
tests/: test_pymspack.py
tests/data/: 000.cab
