[metadata]
name = pymspack
version = 0.2.0
author = Gaetan Crahay
author_email = gaetan@crahay.eu
license = BSD license
description = Python bindings to libmspack
keywords = pymspack
url = https://github.com/gcrahay/pymspack
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
  pymspack = src
packages = pymspack
zip_safe = False
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3; Cython
include_package_data = True
tests_require = pytest

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[wheel]
universal = 1

[flake8]
exclude = docs
